fixed image overlap bug

--- a/assets/stylesheets/quote.css
+++ b/assets/stylesheets/quote.css
@@ -22,19 +22,17 @@ body{
 
 .avatar{
   display: inline-block;
-  position: static;
+  position: relative;
   margin-top: calc(0px - .125rem);
-  left: 16px;
-  padding-right: 10px;
+  padding-right: 20px;
   width: 45px;
   height: 45px;
   border-radius: 50%;
   user-select: none;
-  vertical-align: baseline
+  vertical-align: top;
 }
 
 .contents{
-  position: absolute;
   display: inline-block;
   margin: 0;
   padding: 0;
@@ -93,6 +91,10 @@ body{
 .embed img{
   height: 300px;
   max-width: 500px;
+}
+
+.embed {
+  display: block;
 }
 
 .quote{
